[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui_classes/VButtonContainer.gd" type="Script" id=1]
[ext_resource path="res://resources/user_clubs/user_clubs.gd" type="Script" id=2]

[node name="UserClubs" type="VBoxContainer"]
margin_right = 126.0
margin_bottom = 590.0
rect_min_size = Vector2( 126, 0 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 126.0
margin_bottom = 14.0
text = "Clubs"
align = 1
valign = 1

[node name="UserClubs" type="ScrollContainer" parent="."]
margin_top = 18.0
margin_right = 126.0
margin_bottom = 566.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="UserClubs"]
margin_right = 126.0
size_flags_horizontal = 3
script = ExtResource( 1 )
toggle_mode = false

[node name="JoinClubButton" type="Button" parent="."]
margin_top = 570.0
margin_right = 126.0
margin_bottom = 590.0
text = "Join a Club"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UserClubsMenu" type="PopupMenu" parent="CanvasLayer"]
margin_right = 130.0
margin_bottom = 74.0
items = [ "Leave", null, 0, false, false, 0, 0, null, "", false, "", null, 0, false, false, 1, 0, null, "", true, "Copy ID", null, 0, false, false, 2, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="JoinClubButton" to="." method="_on_JoinClubButton_pressed"]
